src/ass6_20CS10065_20CS30004_parser.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    HASH
    UNKWN


Grammar

    0 $accept: translation_unit $end

    1 marker_M: ε

    2 guard_N: ε

    3 enter_func: ε

    4 create_label: ε

    5 enter_block: ε

    6 primary_expression: IDENTIFIER
    7                   | INTEGER_CONSTANT
    8                   | FLOATING_CONSTANT
    9                   | CHARACTER_CONSTANT
   10                   | STRING_LITERAL
   11                   | LF_PRNTH expression RT_PRNTH

   12 postfix_expression: primary_expression
   13                   | postfix_expression LF_SQBR expression RT_SQBR
   14                   | postfix_expression LF_PRNTH argument_expression_list_opt RT_PRNTH
   15                   | postfix_expression DOT IDENTIFIER
   16                   | postfix_expression ARROW IDENTIFIER
   17                   | postfix_expression PLUS_PLUS
   18                   | postfix_expression MINUS_MINUS
   19                   | LF_PRNTH type_name RT_PRNTH LF_BRACE initializer_list RT_BRACE
   20                   | LF_PRNTH type_name RT_PRNTH LF_BRACE initializer_list COMMA RT_BRACE

   21 argument_expression_list_opt: argument_expression_list
   22                             | ε

   23 argument_expression_list: assignment_expression
   24                         | argument_expression_list COMMA assignment_expression

   25 unary_expression: postfix_expression
   26                 | PLUS_PLUS unary_expression
   27                 | MINUS_MINUS unary_expression
   28                 | unary_operator cast_expression
   29                 | SIZEOF unary_expression
   30                 | SIZEOF LF_PRNTH type_name RT_PRNTH

   31 unary_operator: AMPRSND
   32               | ASTERIX
   33               | PLUS
   34               | MINUS
   35               | TILDE
   36               | EXCLAIM

   37 cast_expression: unary_expression
   38                | LF_PRNTH type_name RT_PRNTH cast_expression

   39 multiplicative_expression: cast_expression
   40                          | multiplicative_expression ASTERIX cast_expression
   41                          | multiplicative_expression SLASH cast_expression
   42                          | multiplicative_expression PRCNT cast_expression

   43 additive_expression: multiplicative_expression
   44                    | additive_expression PLUS multiplicative_expression
   45                    | additive_expression MINUS multiplicative_expression

   46 shift_expression: additive_expression
   47                 | shift_expression L_SHFT additive_expression
   48                 | shift_expression R_SHFT additive_expression

   49 relational_expression: shift_expression
   50                      | relational_expression LESS_TH shift_expression
   51                      | relational_expression MORE_TH shift_expression
   52                      | relational_expression LESS_EQ shift_expression
   53                      | relational_expression MORE_EQ shift_expression

   54 equality_expression: relational_expression
   55                    | equality_expression EQ_EQ relational_expression
   56                    | equality_expression NOT_EQ relational_expression

   57 AND_expression: equality_expression
   58               | AND_expression AMPRSND equality_expression

   59 exclusive_OR_expression: AND_expression
   60                        | exclusive_OR_expression CAP AND_expression

   61 inclusive_OR_expression: exclusive_OR_expression
   62                        | inclusive_OR_expression PIPE exclusive_OR_expression

   63 logical_AND_expression: inclusive_OR_expression
   64                       | logical_AND_expression AND_AND marker_M inclusive_OR_expression

   65 logical_OR_expression: logical_AND_expression
   66                      | logical_OR_expression OR_OR marker_M logical_AND_expression

   67 conditional_expression: logical_OR_expression
   68                       | logical_OR_expression guard_N Q_MARK marker_M expression guard_N COLON marker_M conditional_expression

   69 assignment_expression: conditional_expression
   70                      | unary_expression assignment_operator assignment_expression

   71 assignment_operator: EQ
   72                    | TIMES_EQ
   73                    | SLASH_EQ
   74                    | PRCNT_EQ
   75                    | PLUS_EQ
   76                    | MINUS_EQ
   77                    | LS_EQ
   78                    | RS_EQ
   79                    | AND_EQ
   80                    | XOR_EQ
   81                    | OR_EQ

   82 expression: assignment_expression
   83           | expression COMMA assignment_expression

   84 constant_expression: conditional_expression

   85 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON

   86 init_declarator_list_opt: init_declarator_list
   87                         | ε

   88 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   89                       | type_specifier declaration_specifiers_opt
   90                       | type_qualifier declaration_specifiers_opt
   91                       | function_specifier declaration_specifiers_opt

   92 declaration_specifiers_opt: declaration_specifiers
   93                           | ε

   94 init_declarator_list: init_declarator
   95                     | init_declarator_list COMMA init_declarator

   96 init_declarator: declarator
   97                | declarator EQ initializer

   98 storage_class_specifier: EXTERN
   99                        | STATIC
  100                        | AUTO
  101                        | REGISTER

  102 type_specifier: VOID
  103               | CHAR
  104               | SHORT
  105               | INT
  106               | LONG
  107               | FLOAT
  108               | DOUBLE
  109               | SIGNED
  110               | UNSIGNED
  111               | BOOL
  112               | COMPLEX
  113               | IMAGINARY
  114               | enum_specifier

  115 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  116                         | type_qualifier specifier_qualifier_list_opt

  117 specifier_qualifier_list_opt: specifier_qualifier_list
  118                             | ε

  119 enum_specifier: ENUM identifier_opt LF_BRACE enumerator_list RT_BRACE
  120               | ENUM identifier_opt LF_BRACE enumerator_list COMMA RT_BRACE
  121               | ENUM IDENTIFIER

  122 identifier_opt: IDENTIFIER
  123               | ε

  124 enumerator_list: enumerator
  125                | enumerator_list COMMA enumerator

  126 enumerator: IDENTIFIER
  127           | IDENTIFIER EQ constant_expression

  128 type_qualifier: CONST
  129               | RESTRICT
  130               | VOLATILE

  131 function_specifier: INLINE

  132 declarator: pointer_opt direct_declarator

  133 pointer_opt: pointer
  134            | ε

  135 direct_declarator: IDENTIFIER
  136                  | LF_PRNTH declarator RT_PRNTH
  137                  | direct_declarator LF_SQBR type_qualifier_list assignment_expression_opt RT_SQBR
  138                  | direct_declarator LF_SQBR assignment_expression_opt RT_SQBR
  139                  | direct_declarator LF_SQBR STATIC type_qualifier_list_opt assignment_expression RT_SQBR
  140                  | direct_declarator LF_SQBR type_qualifier_list STATIC assignment_expression RT_SQBR
  141                  | direct_declarator LF_PRNTH enter_func parameter_type_list RT_PRNTH
  142                  | direct_declarator LF_PRNTH identifier_list RT_PRNTH
  143                  | direct_declarator LF_PRNTH enter_func RT_PRNTH

  144 type_qualifier_list_opt: type_qualifier_list
  145                        | ε

  146 assignment_expression_opt: assignment_expression
  147                          | ε

  148 pointer: ASTERIX type_qualifier_list_opt
  149        | ASTERIX type_qualifier_list_opt pointer

  150 type_qualifier_list: type_qualifier
  151                    | type_qualifier_list type_qualifier

  152 parameter_type_list: parameter_list
  153                    | parameter_list COMMA DOT_DOT_DOT

  154 parameter_list: parameter_declaration
  155               | parameter_list COMMA parameter_declaration

  156 parameter_declaration: declaration_specifiers declarator
  157                      | declaration_specifiers

  158 identifier_list: IDENTIFIER
  159                | identifier_list COMMA IDENTIFIER

  160 type_name: specifier_qualifier_list

  161 initializer: assignment_expression
  162            | LF_BRACE initializer_list RT_BRACE
  163            | LF_BRACE initializer_list COMMA RT_BRACE

  164 initializer_list: designation_opt initializer
  165                 | initializer_list COMMA designation_opt initializer

  166 designation_opt: designation
  167                | ε

  168 designation: designator_list EQ

  169 designator_list: designator
  170                | designator_list designator

  171 designator: LF_SQBR constant_expression RT_SQBR
  172           | DOT IDENTIFIER

  173 statement: labeled_statement
  174          | compound_statement
  175          | expression_statement
  176          | selection_statement
  177          | iteration_statement
  178          | jump_statement

  179 labeled_statement: IDENTIFIER COLON statement
  180                  | CASE constant_expression COLON statement
  181                  | DEFAULT COLON statement

  182 compound_statement: LF_BRACE enter_block block_item_list_opt RT_BRACE

  183 block_item_list_opt: block_item_list
  184                    | ε

  185 block_item_list: block_item
  186                | block_item_list marker_M block_item

  187 block_item: declaration
  188           | statement

  189 expression_statement: expression_opt SEMICOLON

  190 expression_opt: expression
  191               | ε

  192 selection_statement: IF LF_PRNTH expression RT_PRNTH marker_M statement guard_N
  193                    | IF LF_PRNTH expression RT_PRNTH marker_M statement guard_N ELSE marker_M statement
  194                    | SWITCH LF_PRNTH expression RT_PRNTH statement

  195 iteration_statement: WHILE marker_M LF_PRNTH expression RT_PRNTH marker_M statement
  196                    | DO marker_M statement marker_M WHILE LF_PRNTH expression RT_PRNTH SEMICOLON
  197                    | FOR LF_PRNTH expression_opt SEMICOLON marker_M expression_opt SEMICOLON marker_M expression_opt guard_N RT_PRNTH marker_M statement
  198                    | FOR LF_PRNTH declaration expression_opt SEMICOLON expression_opt RT_PRNTH statement

  199 jump_statement: GOTO IDENTIFIER SEMICOLON
  200               | CONTINUE SEMICOLON
  201               | BREAK SEMICOLON
  202               | RETURN expression SEMICOLON
  203               | RETURN SEMICOLON

  204 translation_unit: external_declaration
  205                 | translation_unit external_declaration

  206 external_declaration: function_definition
  207                     | declaration

  208 function_definition: declaration_specifiers declarator declaration_list_opt enter_func create_label LF_BRACE block_item_list_opt RT_BRACE

  209 declaration_list_opt: declaration_list
  210                     | ε

  211 declaration_list: declaration
  212                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <sym_ptr> (258) 6 15 16 121 122 126 127 135 158 159 172 179 199
    INTEGER_CONSTANT <str_attr> (259) 7
    FLOATING_CONSTANT <str_attr> (260) 8
    CHARACTER_CONSTANT <str_attr> (261) 9
    STRING_LITERAL <str_attr> (262) 10
    AUTO (263) 100
    STATIC (264) 99 139 140
    ENUM (265) 119 120 121
    RESTRICT (266) 129
    UNSIGNED (267) 110
    BREAK (268) 201
    EXTERN (269) 98
    RETURN (270) 202 203
    VOID (271) 102
    CASE (272) 180
    FLOAT (273) 107
    SHORT (274) 104
    VOLATILE (275) 130
    CHAR (276) 103
    FOR (277) 197 198
    SIGNED (278) 109
    WHILE (279) 195 196
    CONST (280) 128
    GOTO (281) 199
    SIZEOF (282) 29 30
    BOOL (283) 111
    CONTINUE (284) 200
    IF (285) 192 193
    COMPLEX (286) 112
    DEFAULT (287) 181
    INLINE (288) 131
    STRUCT (289)
    IMAGINARY (290) 113
    DO (291) 196
    INT (292) 105
    SWITCH (293) 194
    DOUBLE (294) 108
    LONG (295) 106
    TYPEDEF (296)
    ELSE (297) 193
    REGISTER (298) 101
    UNION (299)
    LF_SQBR (300) 13 137 138 139 140 171
    RT_SQBR (301) 13 137 138 139 140 171
    LF_PRNTH (302) 11 14 19 20 30 38 136 141 142 143 192 193 194 195 196 197 198
    RT_PRNTH (303) 11 14 19 20 30 38 136 141 142 143 192 193 194 195 196 197 198
    LF_BRACE (304) 19 20 119 120 162 163 182 208
    RT_BRACE (305) 19 20 119 120 162 163 182 208
    DOT (306) 15 172
    ARROW (307) 16
    PLUS_PLUS (308) 17 26
    MINUS_MINUS (309) 18 27
    AMPRSND (310) 31 58
    ASTERIX (311) 32 40 148 149
    PLUS (312) 33 44
    MINUS (313) 34 45
    TILDE (314) 35
    EXCLAIM (315) 36
    SLASH (316) 41
    PRCNT (317) 42
    L_SHFT (318) 47
    R_SHFT (319) 48
    LESS_TH (320) 50
    MORE_TH (321) 51
    LESS_EQ (322) 52
    MORE_EQ (323) 53
    EQ_EQ (324) 55
    NOT_EQ (325) 56
    CAP (326) 60
    PIPE (327) 62
    AND_AND (328) 64
    OR_OR (329) 66
    Q_MARK (330) 68
    COLON (331) 68 179 180 181
    SEMICOLON (332) 85 189 196 197 198 199 200 201 202 203
    DOT_DOT_DOT (333) 153
    EQ (334) 71 97 127 168
    TIMES_EQ (335) 72
    SLASH_EQ (336) 73
    PRCNT_EQ (337) 74
    PLUS_EQ (338) 75
    MINUS_EQ (339) 76
    LS_EQ (340) 77
    RS_EQ (341) 78
    AND_EQ (342) 79
    XOR_EQ (343) 80
    OR_EQ (344) 81
    COMMA (345) 20 24 83 95 120 125 153 155 159 163 165
    HASH (346)
    UNKWN (347)
    NONELSE (348)


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    marker_M <int_attr> (95)
        on left: 1
        on right: 64 66 68 186 192 193 195 196 197
    guard_N <expr> (96)
        on left: 2
        on right: 68 192 193 197
    enter_func (97)
        on left: 3
        on right: 141 143 208
    create_label (98)
        on left: 4
        on right: 208
    enter_block (99)
        on left: 5
        on right: 182
    primary_expression <expr> (100)
        on left: 6 7 8 9 10 11
        on right: 12
    postfix_expression <arr> (101)
        on left: 12 13 14 15 16 17 18 19 20
        on right: 13 14 15 16 17 18 25
    argument_expression_list_opt <str_vec> (102)
        on left: 21 22
        on right: 14
    argument_expression_list <str_vec> (103)
        on left: 23 24
        on right: 21 24
    unary_expression <arr> (104)
        on left: 25 26 27 28 29 30
        on right: 26 27 29 37 70
    unary_operator <str_attr> (105)
        on left: 31 32 33 34 35 36
        on right: 28
    cast_expression <arr> (106)
        on left: 37 38
        on right: 28 38 39 40 41 42
    multiplicative_expression <expr> (107)
        on left: 39 40 41 42
        on right: 40 41 42 43 44 45
    additive_expression <expr> (108)
        on left: 43 44 45
        on right: 44 45 46 47 48
    shift_expression <expr> (109)
        on left: 46 47 48
        on right: 47 48 49 50 51 52 53
    relational_expression <expr> (110)
        on left: 49 50 51 52 53
        on right: 50 51 52 53 54 55 56
    equality_expression <expr> (111)
        on left: 54 55 56
        on right: 55 56 57 58
    AND_expression <expr> (112)
        on left: 57 58
        on right: 58 59 60
    exclusive_OR_expression <expr> (113)
        on left: 59 60
        on right: 60 61 62
    inclusive_OR_expression <expr> (114)
        on left: 61 62
        on right: 62 63 64
    logical_AND_expression <expr> (115)
        on left: 63 64
        on right: 64 65 66
    logical_OR_expression <expr> (116)
        on left: 65 66
        on right: 66 67 68
    conditional_expression <expr> (117)
        on left: 67 68
        on right: 68 69 84
    assignment_expression <expr> (118)
        on left: 69 70
        on right: 23 24 70 82 83 139 140 146 161
    assignment_operator (119)
        on left: 71 72 73 74 75 76 77 78 79 80 81
        on right: 70
    expression <expr> (120)
        on left: 82 83
        on right: 11 13 68 83 190 192 193 194 195 196 202
    constant_expression <expr> (121)
        on left: 84
        on right: 127 171 180
    declaration (122)
        on left: 85
        on right: 187 198 207 211 212
    init_declarator_list_opt (123)
        on left: 86 87
        on right: 85
    declaration_specifiers (124)
        on left: 88 89 90 91
        on right: 85 92 156 157 208
    declaration_specifiers_opt (125)
        on left: 92 93
        on right: 88 89 90 91
    init_declarator_list (126)
        on left: 94 95
        on right: 86 95
    init_declarator <sym_ptr> (127)
        on left: 96 97
        on right: 94 95
    storage_class_specifier (128)
        on left: 98 99 100 101
        on right: 88
    type_specifier <str_attr> (129)
        on left: 102 103 104 105 106 107 108 109 110 111 112 113 114
        on right: 89 115
    specifier_qualifier_list <str_attr> (130)
        on left: 115 116
        on right: 117 160
    specifier_qualifier_list_opt <str_attr> (131)
        on left: 117 118
        on right: 115 116
    enum_specifier (132)
        on left: 119 120 121
        on right: 114
    identifier_opt (133)
        on left: 122 123
        on right: 119 120
    enumerator_list (134)
        on left: 124 125
        on right: 119 120 125
    enumerator (135)
        on left: 126 127
        on right: 124 125
    type_qualifier <str_attr> (136)
        on left: 128 129 130
        on right: 90 116 150 151
    function_specifier (137)
        on left: 131
        on right: 91
    declarator <sym_ptr> (138)
        on left: 132
        on right: 96 97 136 156 208
    pointer_opt <str_attr> (139)
        on left: 133 134
        on right: 132
    direct_declarator <sym_ptr> (140)
        on left: 135 136 137 138 139 140 141 142 143
        on right: 132 137 138 139 140 141 142 143
    type_qualifier_list_opt (141)
        on left: 144 145
        on right: 139 148 149
    assignment_expression_opt <expr> (142)
        on left: 146 147
        on right: 137 138
    pointer <str_attr> (143)
        on left: 148 149
        on right: 133 149
    type_qualifier_list (144)
        on left: 150 151
        on right: 137 140 144 151
    parameter_type_list (145)
        on left: 152 153
        on right: 141
    parameter_list (146)
        on left: 154 155
        on right: 152 153 155
    parameter_declaration (147)
        on left: 156 157
        on right: 154 155
    identifier_list (148)
        on left: 158 159
        on right: 142 159
    type_name <str_attr> (149)
        on left: 160
        on right: 19 20 30 38
    initializer <sym_ptr> (150)
        on left: 161 162 163
        on right: 97 164 165
    initializer_list (151)
        on left: 164 165
        on right: 19 20 162 163 165
    designation_opt (152)
        on left: 166 167
        on right: 164 165
    designation (153)
        on left: 168
        on right: 166
    designator_list (154)
        on left: 169 170
        on right: 168 170
    designator (155)
        on left: 171 172
        on right: 169 170
    statement <stmt> (156)
        on left: 173 174 175 176 177 178
        on right: 179 180 181 188 192 193 194 195 196 197 198
    labeled_statement <stmt> (157)
        on left: 179 180 181
        on right: 173
    compound_statement <stmt> (158)
        on left: 182
        on right: 174
    block_item_list_opt <stmt> (159)
        on left: 183 184
        on right: 182 208
    block_item_list <stmt> (160)
        on left: 185 186
        on right: 183 186
    block_item <stmt> (161)
        on left: 187 188
        on right: 185 186
    expression_statement <stmt> (162)
        on left: 189
        on right: 175
    expression_opt <expr> (163)
        on left: 190 191
        on right: 189 197 198
    selection_statement <stmt> (164)
        on left: 192 193 194
        on right: 176
    iteration_statement <stmt> (165)
        on left: 195 196 197 198
        on right: 177
    jump_statement <stmt> (166)
        on left: 199 200 201 202 203
        on right: 178
    translation_unit (167)
        on left: 204 205
        on right: 0 205
    external_declaration (168)
        on left: 206 207
        on right: 204 205
    function_definition (169)
        on left: 208
        on right: 206
    declaration_list_opt (170)
        on left: 209 210
        on right: 208
    declaration_list (171)
        on left: 211 212
        on right: 209 212


State 0

    0 $accept: • translation_unit $end
   85 declaration: • declaration_specifiers init_declarator_list_opt SEMICOLON
   88 declaration_specifiers: • storage_class_specifier declaration_specifiers_opt
   89                       | • type_specifier declaration_specifiers_opt
   90                       | • type_qualifier declaration_specifiers_opt
   91                       | • function_specifier declaration_specifiers_opt
   98 storage_class_specifier: • EXTERN
   99                        | • STATIC
  100                        | • AUTO
  101                        | • REGISTER
  102 type_specifier: • VOID
  103               | • CHAR
  104               | • SHORT
  105               | • INT
  106               | • LONG
  107               | • FLOAT
  108               | • DOUBLE
  109               | • SIGNED
  110               | • UNSIGNED
  111               | • BOOL
  112               | • COMPLEX
  113               | • IMAGINARY
  114               | • enum_specifier
  119 enum_specifier: • ENUM identifier_opt LF_BRACE enumerator_list RT_BRACE
  120               | • ENUM identifier_opt LF_BRACE enumerator_list COMMA RT_BRACE
  121               | • ENUM IDENTIFIER
  128 type_qualifier: • CONST
  129               | • RESTRICT
  130               | • VOLATILE
  131 function_specifier: • INLINE
  204 translation_unit: • external_declaration
  205                 | • translation_unit external_declaration
  206 external_declaration: • function_definition
  207                     | • declaration
  208 function_definition: • declaration_specifiers declarator declaration_list_opt enter_func create_label LF_BRACE block_item_list_opt RT_BRACE

    AUTO       shift, and go to state 1
    STATIC     shift, and go to state 2
    ENUM       shift, and go to state 3
    RESTRICT   shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    EXTERN     shift, and go to state 6
    VOID       shift, and go to state 7
    FLOAT      shift, and go to state 8
    SHORT      shift, and go to state 9
    VOLATILE   shift, and go to state 10
    CHAR       shift, and go to state 11
    SIGNED     shift, and go to state 12
    CONST      shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

  100 storage_class_specifier: AUTO •

    $default  reduce using rule 100 (storage_class_specifier)


State 2

   99 storage_class_specifier: STATIC •

    $default  reduce using rule 99 (storage_class_specifier)


State 3

  119 enum_specifier: ENUM • identifier_opt LF_BRACE enumerator_list RT_BRACE
  120               | ENUM • identifier_opt LF_BRACE enumerator_list COMMA RT_BRACE
  121               | ENUM • IDENTIFIER
  122 identifier_opt: • IDENTIFIER
  123               | ε •  [LF_BRACE]

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 123 (identifier_opt)

    identifier_opt  go to state 33


State 4

  129 type_qualifier: RESTRICT •

    $default  reduce using rule 129 (type_qualifier)


State 5

  110 type_specifier: UNSIGNED •

    $default  reduce using rule 110 (type_specifier)


State 6

   98 storage_class_specifier: EXTERN •

    $default  reduce using rule 98 (storage_class_specifier)


State 7

  102 type_specifier: VOID •

    $default  reduce using rule 102 (type_specifier)


State 8

  107 type_specifier: FLOAT •

    $default  reduce using rule 107 (type_specifier)


State 9

  104 type_specifier: SHORT •

    $default  reduce using rule 104 (type_specifier)


State 10

  130 type_qualifier: VOLATILE •

    $default  reduce using rule 130 (type_qualifier)


State 11

  103 type_specifier: CHAR •

    $default  reduce using rule 103 (type_specifier)


State 12

  109 type_specifier: SIGNED •

    $default  reduce using rule 109 (type_specifier)


State 13

  128 type_qualifier: CONST •

    $default  reduce using rule 128 (type_qualifier)


State 14

  111 type_specifier: BOOL •

    $default  reduce using rule 111 (type_specifier)


State 15

  112 type_specifier: COMPLEX •

    $default  reduce using rule 112 (type_specifier)


State 16

  131 function_specifier: INLINE •

    $default  reduce using rule 131 (function_specifier)


State 17

  113 type_specifier: IMAGINARY •

    $default  reduce using rule 113 (type_specifier)


State 18

  105 type_specifier: INT •

    $default  reduce using rule 105 (type_specifier)


State 19

  108 type_specifier: DOUBLE •

    $default  reduce using rule 108 (type_specifier)


State 20

  106 type_specifier: LONG •

    $default  reduce using rule 106 (type_specifier)


State 21

  101 storage_class_specifier: REGISTER •

    $default  reduce using rule 101 (storage_class_specifier)


State 22

  207 external_declaration: declaration •

    $default  reduce using rule 207 (external_declaration)


State 23

   85 declaration: declaration_specifiers • init_declarator_list_opt SEMICOLON
   86 init_declarator_list_opt: • init_declarator_list
   87                         | ε •  [SEMICOLON]
   94 init_declarator_list: • init_declarator
   95                     | • init_declarator_list COMMA init_declarator
   96 init_declarator: • declarator
   97                | • declarator EQ initializer
  132 declarator: • pointer_opt direct_declarator
  133 pointer_opt: • pointer
  134            | ε •  [IDENTIFIER, LF_PRNTH]
  148 pointer: • ASTERIX type_qualifier_list_opt
  149        | • ASTERIX type_qualifier_list_opt pointer
  208 function_definition: declaration_specifiers • declarator declaration_list_opt enter_func create_label LF_BRACE block_item_list_opt RT_BRACE

    ASTERIX  shift, and go to state 34

    SEMICOLON  reduce using rule 87 (init_declarator_list_opt)
    $default   reduce using rule 134 (pointer_opt)

    init_declarator_list_opt  go to state 35
    init_declarator_list      go to state 36
    init_declarator           go to state 37
    declarator                go to state 38
    pointer_opt               go to state 39
    pointer                   go to state 40


State 24

   88 declaration_specifiers: • storage_class_specifier declaration_specifiers_opt
   88                       | storage_class_specifier • declaration_specifiers_opt
   89                       | • type_specifier declaration_specifiers_opt
   90                       | • type_qualifier declaration_specifiers_opt
   91                       | • function_specifier declaration_specifiers_opt
   92 declaration_specifiers_opt: • declaration_specifiers
   93                           | ε •  [IDENTIFIER, LF_PRNTH, RT_PRNTH, ASTERIX, SEMICOLON, COMMA]
   98 storage_class_specifier: • EXTERN
   99                        | • STATIC
  100                        | • AUTO
  101                        | • REGISTER
  102 type_specifier: • VOID
  103               | • CHAR
  104               | • SHORT
  105               | • INT
  106               | • LONG
  107               | • FLOAT
  108               | • DOUBLE
  109               | • SIGNED
  110               | • UNSIGNED
  111               | • BOOL
  112               | • COMPLEX
  113               | • IMAGINARY
  114               | • enum_specifier
  119 enum_specifier: • ENUM identifier_opt LF_BRACE enumerator_list RT_BRACE
  120               | • ENUM identifier_opt LF_BRACE enumerator_list COMMA RT_BRACE
  121               | • ENUM IDENTIFIER
  128 type_qualifier: • CONST
  129               | • RESTRICT
  130               | • VOLATILE
  131 function_specifier: • INLINE

    AUTO       shift, and go to state 1
    STATIC     shift, and go to state 2
    ENUM       shift, and go to state 3
    RESTRICT   shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    EXTERN     shift, and go to state 6
    VOID       shift, and go to state 7
    FLOAT      shift, and go to state 8
    SHORT      shift, and go to state 9
    VOLATILE   shift, and go to state 10
    CHAR       shift, and go to state 11
    SIGNED     shift, and go to state 12
    CONST      shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 93 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 42
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 25

   88 declaration_specifiers: • storage_class_specifier declaration_specifiers_opt
   89                       | • type_specifier declaration_specifiers_opt
   89                       | type_specifier • declaration_specifiers_opt
   90                       | • type_qualifier declaration_specifiers_opt
   91                       | • function_specifier declaration_specifiers_opt
   92 declaration_specifiers_opt: • declaration_specifiers
   93                           | ε •  [IDENTIFIER, LF_PRNTH, RT_PRNTH, ASTERIX, SEMICOLON, COMMA]
   98 storage_class_specifier: • EXTERN
   99                        | • STATIC
  100                        | • AUTO
  101                        | • REGISTER
  102 type_specifier: • VOID
  103               | • CHAR
  104               | • SHORT
  105               | • INT
  106               | • LONG
  107               | • FLOAT
  108               | • DOUBLE
  109               | • SIGNED
  110               | • UNSIGNED
  111               | • BOOL
  112               | • COMPLEX
  113               | • IMAGINARY
  114               | • enum_specifier
  119 enum_specifier: • ENUM identifier_opt LF_BRACE enumerator_list RT_BRACE
  120               | • ENUM identifier_opt LF_BRACE enumerator_list COMMA RT_BRACE
  121               | • ENUM IDENTIFIER
  128 type_qualifier: • CONST
  129               | • RESTRICT
  130               | • VOLATILE
  131 function_specifier: • INLINE

    AUTO       shift, and go to state 1
    STATIC     shift, and go to state 2
    ENUM       shift, and go to state 3
    RESTRICT   shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    EXTERN     shift, and go to state 6
    VOID       shift, and go to state 7
    FLOAT      shift, and go to state 8
    SHORT      shift, and go to state 9
    VOLATILE   shift, and go to state 10
    CHAR       shift, and go to state 11
    SIGNED     shift, and go to state 12
    CONST      shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 93 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 43
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 26

  114 type_specifier: enum_specifier •

    $default  reduce using rule 114 (type_specifier)


State 27

   88 declaration_specifiers: • storage_class_specifier declaration_specifiers_opt
   89                       | • type_specifier declaration_specifiers_opt
   90                       | • type_qualifier declaration_specifiers_opt
   90                       | type_qualifier • declaration_specifiers_opt
   91                       | • function_specifier declaration_specifiers_opt
   92 declaration_specifiers_opt: • declaration_specifiers
   93                           | ε •  [IDENTIFIER, LF_PRNTH, RT_PRNTH, ASTERIX, SEMICOLON, COMMA]
   98 storage_class_specifier: • EXTERN
   99                        | • STATIC
  100                        | • AUTO
  101                        | • REGISTER
  102 type_specifier: • VOID
  103               | • CHAR
  104               | • SHORT
  105               | • INT
  106               | • LONG
  107               | • FLOAT
  108               | • DOUBLE
  109               | • SIGNED
  110               | • UNSIGNED
  111               | • BOOL
  112               | • COMPLEX
  113               | • IMAGINARY
  114               | • enum_specifier
  119 enum_specifier: • ENUM identifier_opt LF_BRACE enumerator_list RT_BRACE
  120               | • ENUM identifier_opt LF_BRACE enumerator_list COMMA RT_BRACE
  121               | • ENUM IDENTIFIER
  128 type_qualifier: • CONST
  129               | • RESTRICT
  130               | • VOLATILE
  131 function_specifier: • INLINE

    AUTO       shift, and go to state 1
    STATIC     shift, and go to state 2
    ENUM       shift, and go to state 3
    RESTRICT   shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    EXTERN     shift, and go to state 6
    VOID       shift, and go to state 7
    FLOAT      shift, and go to state 8
    SHORT      shift, and go to state 9
    VOLATILE   shift, and go to state 10
    CHAR       shift, and go to state 11
    SIGNED     shift, and go to state 12
    CONST      shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 93 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 44
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 28
